cmake_minimum_required(VERSION 3.0.0)
project(RdtLab VERSION 0.1.0)

add_definitions(-std=c++11)
set(CMAKE_CXX FLAGS -fexec-charset=GBK)
include_directories(${PROJECT_SOURCE_DIR}/include)
find_library(NETSIM_LIB libnetsim.a ${PROJECT_SOURCE_DIR}/lib)
link_libraries(${NETSIM_LIB})
file(GLOB GBN_SRC "src/GBN/*.cpp")
file(GLOB SW_SRC "src/SW/*.cpp")
file(GLOB SR_SRC "src/SR/*.cpp")
file(GLOB TCP_SRC "src/TCP/*.cpp")
file(GLOB COMMON "src/*.cpp")
message(STATUS "-- SW source list: " ${SW_SRC})
message(STATUS "-- GBN source list: " ${GBN_SRC})
message(STATUS "-- SR source list: " ${SR_SRC})
message(STATUS "-- TCP source list: " ${TCP_SRC})
message(STATUS "-- COMMON source list: " ${COMMON})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
message(STATUS "-- executable output path: " ${EXECUTABLE_OUTPUT_PATH})

add_executable(stop_wait ${SW_SRC})
add_executable(gbn ${GBN_SRC} ${COMMON})
add_executable(sr ${SR_SRC} ${COMMON})